
5.1.0 -> 5.2a0:
    - proyvind: python: in case of RPMRC_NOTFOUND, return Py_None without
      rpmlog printing error.
    - proyvind: rpm4compat: add a fdSize() wrapper which uses Fstat().
    - proyvind: rpm4compat: add urltype & prototype for urlPath() since it's
      used by rpmfiBuildFNames. (Why does only C++ complaint about this???)
    - proyvind: rpm4compat: add rpm_machtable_e since it's been moved out of
      the api.
    - proyvind: rpm4compat: explicitly cast to HE_t (C++ compatibility).
    - proyvind: rpm4compat: define all _RPM*_INTERNALs before inclusion of any
      rpm headers at all to ensure that these actually has any effect.
    - jbj: print last problem added w platform affinity failure.
    - jbj: lazily create ts problem set.
    - jbj: selinux: resurrect lsetfilecon using libselinux API.
    - jbj: use macro, not /bin/bash, in scriptlet_requires.
    - jbj: don't run empty transactions, avoiding obscure error msg.
    - jbj: permit a negative index as alias for the last problem added to set.
    - jbj: warn if package is not added because of platform affinity patterns.
    - proyvind: lzdio: fix build with recent api changes.
    - jbj: fix: initialize next element of rpmlog store correctly.
    - rpm.org: python: cleanup & exit callback immediately on error.
    - jbj: add FNM_EXTMATCH to default flags w RPMMIRE_GLOB.
    - jbj: update {nl,id,pl}.po (Translation Project).
    - jbj: rpmio: permit adler32/crc32/crc64 in spite of --without-zlib.
    - jbj: rpmio: eliminate HAVE_ZLIB_H tests, use WITH_ZLIB tests instead.
    - rse: rpmio: allow newer fnmatch to build on non-Linux platforms, too.
    - jbj: rpmio: upgrade  fnmatch to version that implements FNM_EXTMATCH.
    - jbj: rpmpsm: simplify runTriggers() by adding rpmTriggersLoop().
    - jbj: rpmpsm: extract trigger tags once, simplify code, consistent naming.
    - jbj: rpmpsm: extract NVRA and INSTALLPREFIXES lazily & persistently.